--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>New Tab</title>
 </head>
 <body class="fullscreen">
-  <button id="input">입력</button>
+  <button id="input">입력하세요</button>
   <button id="date">날짜설정</button>
 
 
