--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
           <div class="temp-box", id = "results">텍스트가 들어갈 자리(공지 등)</div>
           <div class="temp-box">4</div>
           <div class="temp-box">추후 CSS, 아이콘 작업 등 예정</div>
+          <div class="temp-box", id = "weather">날씨 서비스</div>
+          <div class="temp-box">6</div>
+
+
         </div>
 </body>
 </html>
