--- a/index.html
+++ b/index.html
@@ -5,34 +5,48 @@
 
 <link rel="stylesheet" href="./css/mainWindow.css">
 <html lang="ko">
+
 <head>
-  <script src = "js/buttonHandler.js"></script>
-  <script src = "js/time.js"></script>
+  <script src="js/buttonHandler.js"></script>
+  
 
   <meta charset="UTF-8">
   <title>New Tab</title>
 </head>
-<body class="fullscreen">
-  <button id="input">입력하세요</button>
-  <button id="date">날짜설정</button>
+
+<body>
+  <div id = "clock">
+    <h3 class = "date"></h3>
+    <div class = "userDate">
+      종강시간을 입력해 주세요.
+      <input type= "text" placeholder="yyyymmddhhmm" maxlength = "12"/>
+      <button >종간 시간 입력</button>
+      "ex) 2023년 6월 21일 12시 30분 => 202306211230"
+    </div>
+  </div>
+
+
 
 
   <label for="data"> :: [임시] 출력할 데이터를 입력하세요 :: </label>
 
-  
-  <input type = "text", id ="textInput", value=" ">
+
+  <input type="text" , id="textInput" , value=" ">
 
 
   <div style="background-color: lightgray; color:black; text-align: left; box-sizing: inherit;
   column-gap: 48px; row-gap: 24px;">
-    <h2 name="texts"> 내용1 </h2> </div>
+    <h2 name="texts"> 내용1 </h2>
+  </div>
 
-        <div class="main-container">
-          <div class="temp-box">1</div>
-          <div class="temp-box", id = "time">기타 (시간 등)</div>
-          <div class="temp-box", id = "results">텍스트가 들어갈 자리(공지 등)</div>
-          <div class="temp-box">4</div>
-          <div class="temp-box">추후 CSS, 아이콘 작업 등 예정</div>
-        </div>
+  <div class="main-container">
+    <div class="temp-box">1</div>
+    <div class="temp-box" , id="time">기타 (시간 등)</div>
+    <div class="temp-box" , id="results">텍스트가 들어갈 자리(공지 등)</div>
+    <div class="temp-box">4</div>
+    <div class="temp-box">추후 CSS, 아이콘 작업 등 예정</div>
+  </div>
+  <script src="js/time.js"></script>
 </body>
+
 </html>
