update: index.html, mainWindow.css

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
   </div>
   
   
-
+      <div>
+        <div class="info", id = "icon"> 아이콘이 들어갈 자리 </div>
+        </div>
         
-
 
         <div class="header">
           
