import 관련 CSP 문제로 지연중. reload.js 삭제(파일중복)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <html lang="ko">
 <head>
+  <meta http-equiv="Content-Security-Policy" content="script-src-elem 'self' https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.js; object-src 'self'">
+
   <script type="module" src="js/dataGettings.js"></script>
   <script type="module" src = "js/buttonHandler.js"></script>
   <script src ="module" src= "js/time.js"></script>
